# Django-Recruitment-Tool

./: .gitignore  README.md  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Seeker.jsx
frontend/src/pages/: Home.jsx  Login.jsx  Register.jsx
frontend/src/styles/: Seeker.css
recruitment_tool_django/: db.sqlite3  manage.py
recruitment_tool_django/rc_app/: apps.py  models.py  serializers.py  urls.py  views.py
recruitment_tool_django/rc_app/migrations/: 0001_initial.py  0002_seeker.py
recruitment_tool_django/rc_app/templates/: home.html  todos.html
recruitment_tool_django/recruitment_tool_django/: asgi.py  settings.py  urls.py  wsgi.py
recruitment_tool_django/recruitment_tool_django/.choreo/: endpoints.yaml
