[tool.poetry]
name = "recruitment"
version = "0.1.0"
description = ""
authors = ["willembspy <146359067+willembspy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^30.3.0"
pandas = "^2.2.3"
openai = "^1.51.2"
pinecone = "^5.3.1"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
